--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "bootstrap": "^5.3.3",
+    "brace": "^0.11.1",
+    "font-awesome": "^4.7.0",
+    "react": "^18.3.1",
+    "react-ace": "^14.0.1",
+    "react-csv": "^2.2.2",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.4.0",
+    "react-scripts": "^5.0.1",
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
