--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ace-builds": "^1.39.1",
     "bootstrap": "^5.3.3",
     "brace": "^0.11.1",
     "font-awesome": "^4.7.0",
@@ -30,6 +31,6 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "vite": "^6.2.0"
+    "vite": "^6.2.3"
   }
 }
