--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-ace": "^14.0.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
     "react-toggle-dark-mode": "^1.1.1"
