--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "ROLLUP_USE_NATIVE=false vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
