--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "ace-builds": "^1.39.1",
     "bootstrap": "^5.3.3",
     "brace": "^0.11.1",
+    "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
+    "papaparse": "^5.5.2",
     "react": "^19.1.0",
     "react-ace": "^14.0.1",
-    "react-csv": "^2.2.2",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.4.0",
     "react-scripts": "^5.0.1",
-    "react-toggle-dark-mode": "^1.1.1",
-    "web-vitals": "^4.2.4"
+    "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
